tests/test_input_files/good/test_good_expr_stmt_4.punkt
main {
	const l = <int x, int y> -> int {
		println x + y.
		return x + y.
	}.

	l(1, 2).
}
