tests/test_input_files/bad/test_bad_array_5.punkt
main {
	const a = alloc [<int> -> int] (2).
	a[0] = <int x, int y> -> int { return x + y. }.
}
